fix(tooltips): ensure content is left-aligned

--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -112,7 +112,6 @@
   max-width: $tooltip-max-width;
   padding: $tooltip-padding;
   color: $tooltip-color;
-  text-align: center;
   background-color: $tooltip-bg;
   @include border-radius($tooltip-border-radius);
 }
